# weagi_inference_service

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
src/config/: constant.rs  deepgram.rs  mod.rs  openai.rs  server.rs  tracing.rs
src/controllers/: chat.rs  image.rs  mod.rs  voice.rs
src/dto/: request.rs  response.rs
src/entity/: conversation.rs
src/repositories/: conversation.rs
src/routes/: chat.rs  image.rs  mod.rs  public.rs  voice.rs
src/service/: chat.rs
src/utils/: deepgram.rs  error.rs  file.rs  jwt.rs  mod.rs  openai.rs  session.rs  whisper.rs
