[package]
name = "inference-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-streams = { version = "0.19.0", features = ["text"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
dotenv = "0.15.0"
futures = "0.3.31"
garde = { version = "0.20.0", features = ["full"] }
hex = "0.4.3"
hmac = "0.12.1"
hyper = "1.4.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
redis = "0.27.4"
reqwest = { version = "0.12.8", features = ["json"] }
rs_openai = "0.4.1"
sea-orm = { version = "1.0.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
